[INCOME-2412] SonarQube